# fastapi_mongodb_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  env  gunicorn_starter.sh  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
app/: __init__.py  asgi.py  constants.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  sample_view.py
app/controllers/: __init__.py  sample_controller.py
app/core/: __init__.py  log.py
app/core/database/: __init__.py  mongo_db_setup.py
app/core/exceptions/: app_exceptions.py
app/core/factory/: seeder.py
app/core/repository/base/: mongo_base_repository.py
app/core/service_interfaces/: __init__.py  auth_service_interface.py  event_handler_interface.py  storage_service_interface.py
app/event/: __init__.py  event_notification_handler.py  event_subscription_handler.py
app/models/: __init__.py  sample_model.py
app/repositories/: __init__.py  cache_object.py  sample_repository.py
app/schema/: __init__.py  sample_schema.py
app/services/: redis_service.py
app/utils/: __init__.py  auth.py  encoders.py
tests/: base_test_case.py  conftest.py
tests/controllers/: test_resource_controller.py
tests/data/: test_resource_data.py
tests/model/: test_resource_model.py
tests/service/: __init__.py
tests/utils/: mock_response.py
tests/views/: test_resource_view.py
